Fix error message alignment

--- a/webroot/css/src/styles.less
+++ b/webroot/css/src/styles.less
@@ -810,12 +810,7 @@ body.checkout, body.admin {
             .border-bottom-radius(5px);
             .border-left-radius(5px);
             .clearfix();
-            @media (max-width: @screen-xs-min) {
-                .error-message {
-                    margin: 0 0 2px 21px;
-                }
-            }
-            @media (min-width: @screen-xs-min) and (max-width: @screen-xs-max) {
+            @media (max-width: @screen-xs-max) {
                 .error-message {
                     margin: 0 0 2px 21px;
                 }
@@ -827,7 +822,7 @@ body.checkout, body.admin {
             }
             @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
                 .error-message {
-                    margin: 0 0 2px 175px;
+                    margin: 0 0 2px 252px;
                 }
             }
             @media (min-width: @screen-lg-min) {
